envoy/envoy.yml
static_resources:

  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: 
                        - "*"
                      routes:
                        - match: { prefix: "/" }
                          route: 
                            cluster: poc_server
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config: 
                      "@type": type.googleapis.com/envoy.config.filter.http.jwt_authn.v2alpha.JwtAuthentication
                      providers:
                        auth_keycloak:
                          issuer: http://localhost:8080/auth/realms/Envoy-Keycloak-POC
                          remote_jwks:
                            http_uri:
                              uri: http://localhost:8080/auth/realms/Envoy-Keycloak-POC/protocol/openid-connect/certs
                              cluster: keycloak
                              timeout: 5s
                            cache_duration:
                              seconds: 300
                      rules:
                      - match: {prefix: /}
                        requires: {provider_name: auth_keycloak}
                  - name: envoy.filters.http.router

  clusters:
    - name: poc_server
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: poc_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: server # This is the 'Docker name' of the server. This works because the Envoy container and the server container share the same Docker network
                      port_value: 8081 # TODO use env varible SERVER_PUBLISHED_PORT for server port
    - name: keycloak
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: keycloak
                  port_value: 8080  # TODO use env varible KEYCLOAK_PUBLISHED_PORT for server port

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
